# camera-pipeline

./: .gitignore  Dockerfile  LICENSE  LOGGING_SYSTEM.md  MANIFEST.in  README.md  camera_pipeline  clean.sh  copy_library.py  general.yml  id_ed25519  id_ed25520.pub  pyproject.toml  relatorio_ajustes.md  requirements.txt  setup.py  start.sh  test_instalacao.py  test_multiple_streams.py  verify_libs.py
.github/workflows/: python-package.yml
_skbuild/linux-x86_64-3.12/cmake-build/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeSpec.json  build.ninja  cmake_install.cmake  install_manifest.txt
_skbuild/linux-x86_64-3.12/cmake-install/: README.md  pyproject.toml  setup.py
_skbuild/linux-x86_64-3.12/cmake-install/c_src/: CMakeLists.txt
_skbuild/linux-x86_64-3.12/cmake-install/c_src/include/: callback_utils.h  logger.h
_skbuild/linux-x86_64-3.12/cmake-install/c_src/src/: callback_utils.c  camera_processor.c  logger.c
_skbuild/linux-x86_64-3.12/setuptools/lib.linux-x86_64-cpython-312/camera_pipeline/: __init__.py
_skbuild/linux-x86_64-3.12/setuptools/lib.linux-x86_64-cpython-312/camera_pipeline/core/: __init__.py  c_interface.py  callbacks.py
c_src/: CMakeLists.txt
c_src/cmake/: FindFFmpeg.cmake
c_src/include/: callback_pool.h  camera_context.h  camera_processor.h  frame_queue.h  logger.h
c_src/src/: callback_utils.c  camera_processor.c  camera_thread.c  frame_queue.c  logger.c
camera-pipeline/core/: __init__.py  c_interface.py  callbacks.py  processor.py
camera_pipeline/core/: __init__.py  c_interface.py  logging_config.py  processor.py
camera_pipeline/core/camera_processor/: __init__.py
core/: c_interface.py
core/camera_processor/include/: camera_thread.h
example/: config.py  main.py  test_single_camera.py
example/core/: processor.py
example/gui/: main_window.py  video_widget.py
tests/: test_basic.py
