[build-system]
requires = [
    "setuptools>=78.1.0",
    "wheel>=0.44.0",
    "scikit-build>=0.18.1",
    "packaging>=24.2",
    "distro>=1.9.0",
    "cmake>=3.10.0",
    "ninja",
]
build-backend = "setuptools.build_meta"

[project]
name = "camera-pipeline-processor"
version = "0.1.0"
description = "Processador de Pipeline de Câmera com C/C++ e Python"
readme = "README.md"
authors = [
    {name = "Leandro Zanatta", email = "leandrozanatta27@gmail.com"},
]
requires-python = ">=3.10"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C",
]
dependencies = [
    "opencv-python==4.11.0.86",
    "numpy>=1.26.4",
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]
test = ["pytest"]


[project.urls]
Homepage = "https://github.com/leandroZanatta/camera-pipeline"
Repository = "https://github.com/leandroZanatta/camera-pipeline.git"

[tool.setuptools]
packages = [
    "camera_pipeline", 
    "camera_pipeline.core", 
    "camera_pipeline.core.camera_processor"
]
include-package-data = true

[tool.setuptools.package-data]
"camera_pipeline.core.camera_processor" = ["*.so"]

[tool.scikit-build]
cmake.source-dir = "c_src"
cmake.install-dir = "camera_pipeline/core/camera_processor"
cmake.build-type = "Release"
cmake.verbose = true
wheel.expand-macos-universal-tags = true 